# django-dialogflow

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.js
api/: consumers.py  dailogflow_helper.py  routing.py  urls.py  views.py
chatbot_dialogflow_api/: asgi.py  settings.py  urls.py  wsgi.py
conf/: chatbot_nginx.conf  chatbot_supervisord.conf
src/: App.css  App.jsx
static/: index.html
static/assets/css/: index.min.css
static/assets/js/: index.min.js
templates/: index.html
